GNOME Bugzilla – Bug 743393
DND icons don't work in the inspector
Last modified: 2015-01-24 21:11:39 UTC
Or any other widget/window on a non-default screen. Simple patch attached.
Created attachment 295264 [details] [review] gtkdnd: Set the dnd window's screen before its visual This makes dnd icons work for widgets on a !default screen.
Attachment 295264 [details] pushed as 9668962 - gtkdnd: Set the dnd window's screen before its visual