gtkdnd: Set the dnd window's screen before its visual

This makes dnd icons work for widgets on a !default screen.

https://bugzilla.gnome.org/show_bug.cgi?id=743393